--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/server.js",
     "client": "npm start --prefix client"
   },
-  "author": "Ashutosh Saini",
+  "author": "Dilip Bairwa",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
